--- a/tarea3/src/main/resources/templates/errors.html
+++ b/tarea3/src/main/resources/templates/errors.html
@@ -29,7 +29,8 @@
             			<tr th:each="c : ${errores}">
             				<td th:text="${c}" />
             			</tr>
-            		</table>
+            	</table>
+            	<a href="javascript:history.back()">Regresar</a>
 			</div>
 		</div>
 	</div>
