--- a/tarea3/src/main/resources/templates/index.html
+++ b/tarea3/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 	<div class="bg-contact3" style="background-image: url('images/bg.jpg');">
 		<div class="container-contact3">
 			<div class="wrap-contact3">
-				<form class="contact3-form validate-form" method="post" th:action="@{/parametros}">
+				<form class="contact3-form validate-form" method="post" th:action="@{/exito}">
 					<span class="contact3-form-title">
 						Formulario
 					</span>
