--- a/tarea3/src/main/resources/templates/results.html
+++ b/tarea3/src/main/resources/templates/results.html
@@ -25,7 +25,7 @@
 		<div class="container-contact3">
 			<div class="wrap-contact3">
 				<span class="contact3-form-title">Alumno ingresado con exito</span>
-				<a href="/index">Ingresar Nuevo Alumno</a>
+				<a href="/ingresar">Ingresar Nuevo Alumno</a>
 			</div>
 		</div>
 	</div>
